# dev_dive_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  start.sh  workers.sh
alembic/: env.py
alembic/versions/: 2024_09_19_0013-e58e7ee8cc61_create_tables.py  2024_10_13_1641-309782bf60cf_init.py  2024_11_06_1514-abe29ec0af65_init.py  2024_11_06_1519-2583d6297e54_chat.py  2024_11_07_0845-3d42dde3553d_question_searching.py  2024_12_16_2011-a6e53bf65965_change_image.py  ba787aa1c7d9_init.py
managers/: redis_manager.py
src/core/: config.py  logger.config  logger.py  role.py
src/db/: database.py  session.py
src/domain/models/: __init__.py  _question_tag.py  _vote.py  answer.py  base.py  chat_message.py  downvote.py  image.py  question.py  tag.py  upvote.py  user.py
src/domain/schemas/: _validators.py  answer.py  auth.py  chat.py  image.py  question.py  tag.py  user.py  vote.py
src/domen/models/: __init__.py  _question_tag.py  _vote.py  answer.py  downvote.py  question.py  (+2 more)
src/managers/: __init__.py  minio_manager.py  redis_manager.py  websocket_manager.py
src/models/: __init__.py  _question_tag.py  _vote.py  answer.py  downvote.py  question.py  tag.py  upvote.py  user.py
src/repositories/: answer.py  auth.py  base.py  chat.py  downvote.py  image.py  question.py  tag.py  upvote.py  user.py
src/services/: answer.py  auth.py  chat.py  downvote.py  image.py  question.py  tag.py  upvote.py  user.py
src/tests/: test_user_service.py
src/workers/: celeryconfig.py
(+15 files in other folders)
