[project]
name = "dev-dive-backend"
version = "0.1.0"
description = ""
authors = ["Neurotrier <neurotrier123@gmail.com>"]
readme = "README.md"
dependencies = [
    "fastapi==0.114.1",
    "sqlalchemy==2.0.34",
    "uvicorn==0.30.6",
    "pydantic==2.9.1",
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "black==24.8.0",
    "isort==5.13.2",
    "bcrypt==4.2.0",
    "python-multipart==0.0.9",
    "pydantic-settings==2.5.2",
    "pre-commit==3.8.0",
    "redis==5.1.0",
    "minio==7.2.9",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pyjwt==2.9.0",
    "websockets==13.1",
    "celery[redis]==5.4.0",
    "psycopg[binary]==3.2.3",
    "gevent>=24.10.3",
    "mypy>=1.13.0",
]
requires-python = ">=3.11"

[tool.isort]
profile = "black"
